WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
224087
[watchOS] Contact AutoFill suggestions no longer show up in non-username or password fields
https://bugs.webkit.org/show_bug.cgi?id=224087
Summary
[watchOS] Contact AutoFill suggestions no longer show up in non-username or p...
Wenson Hsieh
Reported
2021-04-01 16:46:57 PDT
<
rdar://problem/76080205
>
Attachments
Patch
(2.82 KB, patch)
2021-04-01 16:58 PDT
,
Wenson Hsieh
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2021-04-01 16:58:55 PDT
Created
attachment 424962
[details]
Patch
EWS
Comment 2
2021-04-01 17:52:21 PDT
Committed
r275397
: <
https://commits.webkit.org/r275397
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 424962
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug