[watchOS] Contact AutoFill suggestions no longer show up in non-username or password fields https://bugs.webkit.org/show_bug.cgi?id=224087 <rdar://problem/76080205>

Reviewed by Tim Horton.

For the time being, limit use of `PUICQuickboardController` to text content types that would allow for login
credential AutoFill in Quickboard. We can remove this logic when `PUICQuickboardController` can be updated with
and present arbitrary text suggestion values.

* UIProcess/ios/WKContentViewInteraction.mm:
(canUseQuickboardControllerFor):
(-[WKContentView presentViewControllerForCurrentFocusedElement]):


Canonical link: https://commits.webkit.org/236061@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@275397 268f45cc-cd09-0410-ab3c-d52691b4dbfc